--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "authenticate",
   "version": "1.0.0",
   "description": "API using Node js to build thorough understanding of Authentication using JWT",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
